docs: added javadoc